--- a/style.css
+++ b/style.css
@@ -74,6 +74,15 @@ main::after {
     
 }
 
+footer {
+
+    width: 80%;
+    height: 50px;
+    background-color: rgb(144, 63, 236);
+    margin: auto;
+    margin-top: 5px;
+}
+
 
 
 
